# hopnet

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.old  README.md  relazione.md
binarize/: binarize.cpp  binarize.hpp  input.cpp  input.hpp  main.cpp  prova.cpp
common/: input.cpp  input.hpp  pattern.cpp  pattern.hpp  weight_matrix.cpp  weight_matrix.hpp
include/binarize/: input.hpp  utils.hpp
include/common/: input.hpp  weight_matrix.hpp
include/recall/: input.hpp  neural_network.hpp  utils.hpp
include/train/: input.hpp  pattern.hpp
recall/: main.cpp  recall.cpp  recall.hpp  weight_matrix-recall.cpp
src/binarize/: input.cpp  main.cpp  utils.cpp
src/common/: input.cpp  pattern.cpp  weight_matrix.cpp
src/recall/: input.cpp  main.cpp  neural_network.cpp  utils.cpp  weight_matrix-recall.cpp
src/train/: input.cpp  main.cpp  pattern.cpp  weight_matrix-train.cpp
tests/: test.cpp  vectorTest.txt
train/: main.cpp  train.cpp  train.hpp  weight_matrix-train.cpp
